# nanostructure-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  apd_functions.py  apd_plotting_functions.py  confocal_functions.py  confocal_plotting_functions.py  loading_functions.py  main.py  plotting_functions.py  pyproject.toml  sem_functions.py  sem_plotting_functions.py  spectra_functions.py  spectra_plotting_functions.py
archive/: ALL_plotting_functions_OLD.py  confocal_functions.py  confocal_plotting_functions.py  work_Au_100nm.py  work_Au_100nm_vs_200nm_confocal-OLLE.py  work_Au_100nm_vs_200nm_confocal.py  work_Au_200nm.py  work_Au_200nm_vs_100nm.py  work_Au_200nm_vs_100nm_new.py  work_all_SNR.py  work_edona_sample.py  work_sample_20_10.24.py  work_sample_20_10.24_holes.py  work_sample_20_11.10.py  work_sample_20_11.20_high_signal.py  work_sample_20_11.20_trapping_laser_z.py  work_sample_20_new_30um_aperature.py  work_sample_21_sem_correlations.py  work_size_of_white_laser.py
examples/: Au_200nm_vs_100nm.py
scripts/: work_100nm_remastered.py  work_100nm_snr_violin.py  work_WF_vs_confocal_Z.py  work_apd_check.py  work_big_aperatures.py  work_comparing_20um.py  work_example.py  work_laser_snr.py  work_main.py  work_plot_200nm_absolute_values.py  work_plot_all_4_spectra_no_max_norm.py  work_plot_all_individual_spectra_absolute.py  work_rods_polarization.py  work_sample_19_WF.py  work_sample_19_different_hole_sizes.py  work_sample_20_12.1.py  work_sample_20_WF.py  work_sample_20_WF_no_telescope.py  work_sample_20_WF_vs_Z_comparison.py  work_sample_20_disks_and_rods_new.py  (+16 more)
(+11 files in other folders)
